--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "menggunakan graphql sebagai penghubung frontend & backend",
   "main": "server/server.js",
   "scripts": {
-    "server-start": "node server/server.js",
-    "server-dev": "nodemon server/server.js"
+    "dev:server": "nodemon server/server.js",
+    "dev:client": "webpack serve --mode=development --config ./webpack.config.js --open",
+    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
+    "start": "node server/server.js"
   },
   "repository": {
     "type": "git",
@@ -22,20 +24,35 @@
   },
   "homepage": "https://github.com/febriadj/fullstack-graphql#readme",
   "devDependencies": {
+    "@babel/core": "^7.15.0",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-react": "^7.14.5",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^6.2.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "sass": "^1.38.1",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.2.1",
+    "webpack": "^5.51.1",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.0.0"
   },
   "dependencies": {
+    "concurrently": "^6.2.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.5.1",
-    "mongoose": "^6.0.1"
+    "mongoose": "^6.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
