--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,9 +19,14 @@
         "react"
     ],
     "rules": {
-        "brace-style": "off",
+        "react/self-closing-comp": "off",
+        "jsx-a11y/control-has-associated-label": "off",
+        "react/prop-types": "off",
+        "jsx-a11y/no-static-element-interactions": "off",
         "semi": "off",
+        "arrow-body-style": "off",
         "linebreak-style": "off",
-        "no-console": "off"
+        "no-console": "off",
+        "brace-style": "off"
     }
 }
