--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "graphql": "^15.5.1",
+    "graphql-request": "^3.5.0",
     "mongoose": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
