--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "express-graphql": "^0.12.0",
     "graphql": "^15.5.1",
     "graphql-request": "^3.5.0",
+    "moment": "^2.29.1",
     "mongoose": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
